<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySimpleApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plus">Enlarge</string>
    <string name="minus">Shrink</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="random">Random</string>

</resources>
