<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.beck.fragmentsimplepaint.MainActivity" >


    <item android:id="@+id/plus"
          android:icon="@drawable/plus"
          android:title="@string/plus"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/minus"
          android:icon="@drawable/minus"
          android:title="@string/minus" />
    <item android:id="@+id/red"
          android:title="@string/red" />
    <item android:id="@+id/green"
          android:title="@string/green" />
    <item android:id="@+id/blue"
          android:title="@string/blue" />
    <item android:id="@+id/random"
          android:title="@string/random" />

</menu>
